manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: echo-service
  namespace: ${ parameters.namespace }
spec:
  selector:
    source: demo
    app: echo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
