manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: '${ parameters.namespace }'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: echo.cloudacademy.${ parameters.publicip }.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: echo-service
          servicePort: 8080
